# 2026-Exoplanet-Research

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml
.codex/: config.toml
Skills/: __init__.py  active_learning_scorer.py  airmass_calculator.py  alert_filter.py  alert_webhook.py  aperture_optimization_scorer.py  aperture_photometry_simulator.py  apsidal_precession_calculator.py  archive_lookup.py  astroimagej_region_writer.py  atmospheric_composition_classifier.py  atmospheric_detectability_scorer.py  atmospheric_dispersion_estimator.py  atmospheric_escape_rate_estimator.py  atmospheric_scale_height_calculator.py  atmospheric_transmission_calculator.py  autocorrelation_period_finder.py  background_source_probability.py  barycentric_time_corrector.py  batch_email_formatter.py  batch_result_archiver.py  batch_scan.py  bias_variance_analyzer.py  bin_time_series.py  binary_dilution_corrector.py  binary_eclipse_timing_model.py  binary_star_rv_model.py  binned_lc_exporter.py  bootstrap_uncertainty.py  build_cnn_training_data.py  build_combined_training_data.py  build_joint_cnn_splits.py  build_t1_training_manifest.py  build_tess_training_data.py  build_training_data.py  bulk_priority_update.py  cadence_irregularity_scorer.py  calibrate_stacking_weights.py  calibration_curve_reporter.py  candidate_alert_composer.py  (+509 more)
configs/: README.md  background_search_v0.json  cnn_kepler_pretrain.json  cnn_retrain_v1.json  cnn_retrain_v2.json  cnn_retrain_v2b.json  cnn_retrain_v3.json  cnn_retrain_v3b.json  cnn_tess_c15.json  cnn_tess_c16.json  cnn_tess_c17.json  cnn_tess_c18.json  cnn_tess_c19.json  cnn_tess_c20.json  cnn_tess_finetune.json  cnn_tess_finetune_c12.json  scoring_priors_v0.json
data/: new_tess_targets.txt
docs/: API_SPEC.md  BACKGROUND_SEARCH_AUTOMATION_BLUEPRINT.md  BACKGROUND_SEARCH_SQLITE_SCHEMA.md  CNN_PRODUCTION_RUNBOOK.md  CNN_SPEC.md  CTOI_SOURCE_CONTRACT.md  DASHBOARD_SPEC.md  DATA_SOURCES.md  DECISIONS.md  DISCOVERY_RUNBOOK.md  Exoplanet_Research_MCP_BOOTSTRAP.md  LOCAL_ARTIFACT_LEDGER.md  ML_SCORING.md  PIPELINE_SPEC.md  PRODUCTION_READINESS.md  PROJECT_STATUS.md  ROADMAP.md  SCHEDULER.md  SCORING_MODEL.md  SKILLS_GUIDE.md  SYSTEM_PROFILE.md  exoplanet_detection_research_brief.md  exoplanet_exomoon_dataset_handoff.md
logs/: .gitignore  README.md
metadata/: download_manifest_sample.jsonl  source_snapshots.json  t1_1_kepler_manifest_summary.json  t1_1_kepler_training_manifest.jsonl  t1_1_training_batch_plan.json
models/: xgboost_koi.json  (+3 more)
(+890 files in other folders)
